--- a/index.html
+++ b/index.html
@@ -10,5 +10,18 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          One of three columns
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
+      </div>
+    </div>
 </body>
 </html>
