--- a/index.html
+++ b/index.html
@@ -13,13 +13,10 @@
     <div class="container">
       <div class="row">
         <div class="col-sm">
-          One of three columns
+          <img src="me.png" class="img-fluid" alt="Headshot July 2018"></img>
         </div>
         <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
+          <h1>Lucas Nicolois's Resume</h1>
         </div>
       </div>
     </div>
