First Draft of Resume

--- a/index.html
+++ b/index.html
@@ -12,13 +12,107 @@
     </noscript>
     <div class="container">
       <div class="row">
-        <div class="col-sm">
-          <img src="me.png" class="img-fluid" alt="Headshot July 2018"></img>
-        </div>
-        <div class="col-sm">
-          <h1>Lucas Nicolois's Resume</h1>
+        <div class="col-12">
+          <h1 class = "text-center">Lucas Nicolois's Resume</h1>
         </div>
       </div>
+      <div class="row">
+        <div class="col-4">
+          <img src="me.png" class="img-fluid" alt="Headshot July 2018"></img>
+        </div>
+        <div class="col-8">
+          <p class="text-left-align">
+            <b>Address: </b>366 6th Avenue, Brooklyn New York, 11215<br>
+            <b>Phone: </b>(267)-987-3681<br>
+            <b>Email: </b>peteluke@gmail.com<br>
+            <b>Current Side Project: </b> <a href = "https://github.com/shadowz667/BejewledBot">A Basic Machine Learning Experiment</a><br>
+            <b>Objective:</b> I'm looking to solve interesting problems through both code and critical thinking, while also expanding my skills in all forms of development
+
+          </p>
+        </div>
+
+      </div>
     </div>
+
+          <h2 class = "text-center">Work Experience</h2>
+          <br>
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <h4>Business Technology Analyst at Deloitte</h4> <b>July 2018-Present</b>
+          <br>Performed project management work and other roles at several clients:
+          <ul>
+          <li>Testing Coordinator for an IT transformation project at a video game publisher</li>
+          <li>Product Owner for a Self Service Modeling Solution at a national retailer</li>
+          <li>Project Management for a quoting and rating engine for a large insurance company</li>
+          </ul>
+          All these roles involved leading meetings, coordinating clients, and evaluating requirements
+
+        </div>
+        <div class="col-6">
+          <div class="row">
+            <h5 class="text-center">Illustrative Clients</h5>
+          </div>
+          <div class="row">
+            <div class="col-5">
+              <img src="Client Logos.png" class="img-fluid" alt="Client Logo"></img>
+            </div>
+            <div class="col-7">
+              <img src="logo2.png" class="img-fluid" alt="Client Logo"></img>
+              <img src="client3.png" class="img-fluid" alt="Client Logo"></img>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+          <div class="col-6">
+            <h4>Research Assistant at Bucknell University</h4> <b>June 2016-August 2016</b>
+            Using wearable sensors and machine learning to predict cognitive workload as well as implicit biases in subjects. Notable accomplishments include designing and conducting a full research study with human participants, as well as contributing to the design of the data collection software.
+          </div>
+          <div class="col-6">
+            <h4>IT Analyst Intern at Urban Outfitters</h4> <b>June - August 2013 - 2015</b>
+            Created SQL reports and functions for processing and displaying sales data. Worked with business teams in the US and UK to create important sales and marketing tools for day to day operations. Tested backend database functionality for a project to move server administration in house, and worked on a prototype live web data reporting app.
+          </div>
+      </div>
+    </div>
+    <br>
+    <h2 class = "text-center">Other Skills and Expierence</h2>
+    <br>
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <h5>Programming languages</h5>
+          <b>Proficient in:</b> Java, Python, C<br>
+          <b>Familiar with:</b> C++, Matlab, HTML, PHP, Javascript, and CSS<br>
+          <br>
+          <h5>Certifications</h5>
+          <a href="https://www.credential.net/r94gtsni?key=6f58de93ce3c29b33e7630d5def39afd317b04e5689cfd7e392dc09e8243920e">Google Associate Cloud Engineer Certification</a><br>
+          <a href="AWS Cert.pdf"> AWS Certified Solutions Architect - Associate (SAA)</a>
+        </div>
+        <div class="col-6">
+          <h5>Side Projects and Educational Expierence</h5>
+          <br>
+          <div class="row">
+              <div class="col-6">
+                <h5>Senior Capstone</h5>
+                <p class="text-left-align">
+                  Acted as Scrum Master for the development of a REST API server built on Flask and hosted on AWS. Coordinated with the mobile development team and client to understand requirements and set realistic sprint goals. Created the majority of the python APIs and testing suite and assisted in web development for the desktop client.
+                </p>
+              </div>
+              <div class="col-6">
+                <h5>Bejewled Bot</h5>
+                <p class="text-left-align">
+
+                  Created the interface for an unsupervised neural network built with tensor flow to interact with the game Bejeweled 3 for PC, with the goal of teaching the neural network to play the game. Future goals are to create a faster training environment and to either switch to a more supervised learning environment or better tune the model.
+                </p>
+              </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
 </body>
 </html>
