--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h1 class = "text-center">Lucas Nicolois's Resume</h1>
+          <h1 class = "text-center">Lucas's Resume</h1>
         </div>
       </div>
       <div class="row">
@@ -22,6 +22,7 @@
         </div>
         <div class="col-8">
           <p class="text-left-align">
+            <b>Full Legal Name:</b> Peter Lucas Nicolois
             <b>Address: </b>366 6th Avenue, Brooklyn New York, 11215<br>
             <b>Phone: </b>(267)-987-3681<br>
             <b>Email: </b>peteluke@gmail.com<br>
