--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="col-8">
           <p class="text-left-align">
-            <b>Full Legal Name:</b> Peter Lucas Nicolois
+            <b>Full Legal Name:</b> Peter Lucas Nicolois<br>
             <b>Address: </b>366 6th Avenue, Brooklyn New York, 11215<br>
             <b>Phone: </b>(267)-987-3681<br>
             <b>Email: </b>peteluke@gmail.com<br>
